--- a/src/components/TodoListItem/todoListItem.css
+++ b/src/components/TodoListItem/todoListItem.css
@@ -1,7 +1,23 @@
 .todo-list-item {
   padding: 0, 10px, 0, 10px;
+  cursor: pointer;
 }
 
 .btn-my {
   border: 2px solid lightgrey
+}
+
+
+.important span {
+  font-weight: bold;
+  color: blue;
+}
+
+.done span {
+  text-decoration: line-through;
+  color: grey;
+}
+
+.fa-star {
+  color: blue;
 }
